@@ -58,7 +58,6 @@ SPEC_FILES = \
 	libevtx.spec.in
 
 EXTRA_DIST = \
-	README.macosx \
         $(DPKG_FILES) \
         $(GETTEXT_FILES) \
         $(PKGCONFIG_FILES) \
