@@ -1,0 +1,51 @@
+[Project]
+name: "libevtx"
+status: "alpha"
+features: [
+    "debug_output", "tests", "tools", "python",
+    "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSRnQ0SExzX3JjdFE/"
+
+[git]
+url: "https://code.google.com/p/libevtx/"
+
+[tests]
+features: ["valgrind"]
+profiles: ["libevtx", "pyevtx", "evtxinfo", "evtxexport", "evtxexport_xml"]
+example_filename1: "System.Evtx"
+example_filename2: "Application.Evtx"
+
+[tools]
+directory: "evtxtools"
+names: ["evtxexport", "evtxinfo"]
+
+[cygwin]
+build_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "cygevtx-0.dll"
+
+[gcc]
+build_dependencies: []
+static_build_dependencies: []
+
+[mingw]
+build_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "libevtx-1.dll"
+
+[msvscpp]
+build_dependencies: []
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: []
+
+[rpm]
+build_dependencies: []
+
