@@ -76,6 +76,9 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20140929
+* removed README.macosx
+
 20140901
 * bug fix in Python-bindings
 
